# ecosystem

./: .gitattributes  .gitignore  .stignore  BUGS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_BIBLE.txt  ECOSYSTEM_TODO.md  GUIDE.md  README.md  SETUP.txt  TODO.md  atualizar.bat  atualizar.sh  buildar.bat  buildar.sh  ecosystem.local.example.json  ecosystem_client.py  ecosystem_logging.py  ecosystem_qt.py  ecosystem_scraper.py  ecosystem_secrets.py  hardware_probe.py  logits_worker.py  note.txt  notes.md  notes.txt  pesquisas.md  pesquisas_new.md  reorg_pesquisas.py  shared_history.py  shared_topic_profile.py  vram_monitor.py
AKASHA/: .gitignore  README.md  TODO.md  config.py  database.py  iniciar.bat  iniciar.sh  main.py  pesquisa.txt  planejamento.md  pyproject.toml
AKASHA/extension/: .amo-upload-uuid  background.js  content.js  manifest.json
AKASHA/routers/: chat.py  context.py  crawler.py  dialogue.py  domains.py  downloads.py  favorites.py  friendship.py  graph.py  highlights.py  history.py  interests.py  kosmos_bridge.py  lenses.py  library.py  memory.py  papers.py  search.py  settings.py  suggestions.py  system.py  watch_later.py
AKASHA/scripts/: backfill_word_count.py  searxng_settings.yml  setup_searxng.sh
AKASHA/services/: affective_state.py  archiver.py  click_log.py  crawler.py  crawler_scheduler.py  domain_suggester.py  downloader.py  freshness.py  friendship_receiver.py  image_indexer.py  invidious.py  knowledge_worker.py  kosmos_search.py  library.py  list_sync.py  local_search.py  log_buffer.py  observer_popups.py  pagerank.py  paper_download.py  paper_search.py  persona.py  personal_memory.py  query_expansion.py  query_multilang.py  query_understanding.py  realtime_context.py  reflection_loop.py  search_profile.py  search_session.py  semantic_search.py  session_insight.py  session_memory.py  suggester.py  translation_card.py  user_data.py  weather_widget.py  web_search.py  wiki_card.py
AKASHA/static/: style.css
AKASHA/templates/: _citations.html  _coread.html  _domains_list.html  _downloads_active.html  _favorites_list.html  _graph_pages.html  _library_discover.html  _library_list.html  _macros.html  _more_from_source.html  _related.html  _search_backend_banner.html  _search_suggest.html  _search_summary.html  _site_pages.html  _sites_discover.html  _sites_list.html  base.html  chat.html  domains.html  downloads.html  favorites.html  graph.html  history.html  images.html  lenses.html  library.html  page_reader.html  profile.html  search.html  search_history.html  search_more.html  settings.html  sites.html  suggestions.html  videos.html  watch_later.html
AKASHA/tests/: conftest.py  test_429_backoff.py  test_affective_state.py  test_affective_state_db.py  test_assistant_enabled_flag.py  test_chat_domain_suggestion.py  test_chat_phases.py  test_click_log.py  test_collab1_source_path.py  test_collab3_akasha_endpoint.py  test_collab3_fair_rag_cycle.py  test_consensus_mode.py  test_crawl_status_endpoint.py  test_crawler_scheduler.py  test_database_infra.py  test_deep_research.py  test_deep_research_novelty.py  test_deep_research_steps.py  test_diversify_config.py  test_domain_quality.py  test_domain_suggester.py  test_ecosystem_secrets.py  test_embed_and_index.py  test_embed_text_retry.py  test_embeddings_contract.py  test_extraction_quality.py  test_fetch_get.py  test_freshness.py  test_friendship_receiver.py  test_image_indexer.py  test_index_local_embed.py  test_inference_url_config.py  test_inline_domain_suggest.py  test_intent_no_truncation.py  test_intent_routing.py  test_invidious.py  test_knowledge_worker_headers.py  test_local3_semantic_search.py  test_local4_backfill.py  test_local_priority.py  (+54 more)
HUB/src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
KOSMOS/: .gitignore  KOSMOS_DEV_BIBLE_1.txt  README.txt  ROADMAP.md  TODO.md  iniciar.bat  iniciar.sh  main.py  pesquisa.txt  pyproject.toml  requirements.txt
KOSMOS/tests/: conftest.py  test_alerts.py  test_analysis_tab.py  test_analysis_worker.py  test_archiver.py  test_article_list.py  test_article_scraper.py  test_config.py  test_coverage_map.py  test_dashboard_view.py  test_database.py  test_discover_feeds_dialog.py  test_entities.py  test_entity_view.py  test_feed_discovery.py  test_feed_fetcher.py  test_feed_sidebar.py  test_feeds_admin.py  test_fetch_worker.py  test_framing.py  test_highlights.py  test_interests.py  test_investigation_view.py  test_investigations.py  test_launch.py  test_log_path.py  test_logos_client.py  test_nav_rail.py  test_reader_analysis.py  test_reader_highlights.py  test_reader_pane.py  test_saved_view.py  test_scraper_worker.py  test_settings_view.py  test_settings_window.py  (+8 more)
transcriber/: .prefs.json  INSTALL.md  README.md  iniciar_linux.sh  iniciar_windows.bat  pyproject.toml  setup.ps1  transcriber.py
(+463 files in other folders)
