[project]
name = "akasha"
version = "0.1.0"
description = "AKASHA — Buscador pessoal local do ecossistema"
authors = [{ name = "Jenifer Angelo" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "duckduckgo-search>=6.0",
    "qbittorrent-api>=2024.1",
    "trafilatura>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
