[project]
name = "akasha"
version = "0.1.0"
description = "AKASHA — Buscador pessoal local do ecossistema"
authors = [{ name = "Jenifer Angelo" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "jinja2>=3.1,<3.1.5",
    "python-multipart>=0.0.12",
    "ddgs>=1.0",
    "qbittorrent-api>=2024.1",
    "trafilatura>=1.12",
    "inscriptis>=2.3",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
    "markdown>=3.7",
    "aioarxiv>=0.2",
    "pymupdf4llm>=0.0.17",
    "filelock>=3.13",
    "bm25s>=0.2",
    "langdetect>=1.0",
    "nltk>=3.8",
    "simhash>=2.1",
    "url-normalize>=1.4",
    "flashrank>=0.2",
    "sqlite-vec>=0.1",
    "sentence-transformers>=3.0",
    "symspellpy>=6.7",
    "imagehash>=4.3",
    "pybktree>=1.1",
    "Pillow>=10.0",
    "networkx>=3.0",
    "argostranslate>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
