[project]
name = "kosmos"
version = "3.0.0"
description = "Leitor, agregador e gerenciador de feeds"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "feedparser>=6.0",
    "trafilatura>=1.9",
    "requests>=2.31",
    "argostranslate>=1.9",
    "matplotlib>=3.8",
    "filelock>=3.13",
    "Pillow>=10",
    "html2text",
]

[dependency-groups]
dev = ["ruff>=0.4"]
