[package]
name = "hub"
version = "0.1.0"
description = "HUB — Central do Ecossistema"
authors = ["Jenifer Angelo"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
fs2 = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sysinfo = { version = "0.32", features = ["system"] }
